[package]
name = "eth1_merkle_proofer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.12.1"
json = "*"
bls = { path = "ext/crypto/bls" }
eth2_ssz_types = { path = "ext/ssz_types" }
