[package]
name = "eth1_merkle_proofer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.12.1"
json = "*"
bls = { path = "ext/crypto/bls" }
eth2_ssz_types = { path = "ext/ssz_types" }
envy = "*"
serde_json = "1.0.74"
serde = {version = "1.0.116" , features = ["rc"] }
serde_derive = "1.0.116"
eth2_serde_utils = { path = "ext/serde_utils" }
tree_hash = { path = "ext/tree_hash" }
tree_hash_derive = "0.4.0"
merkle_proof = { path = "ext/merkle_proof" }
